DuPont DevSB/src/objects/KevlarDefaultPricingMaster__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>created to store default values for solution pricing</description>
    <fields>
        <fullName>BAM_Margin__c</fullName>
        <label>BAM Margin</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_Outer_Carrier__c</fullName>
        <label>Cost of Outer Carrier</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_of_SAP_pouches__c</fullName>
        <label>Cost of SAP pouches</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAP_Material_Wastage__c</fullName>
        <label>HAP Material Wastage</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Wastage__c</fullName>
        <label>SAP Material Wastage</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Kevlar Default Pricing Master</label>
</CustomObject>